create validation for registration

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -329,6 +329,7 @@ h3{
   color: $color__white;
   background-color: $color__pink--dark;
   font-size: 1.1rem;
+  line-height: 1.3rem;
   font-weight: 300;
   padding: 0.5rem 0.7rem;
   margin: 0 0 0.7rem;
