small design and text changes

--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -44,7 +44,7 @@
     <li class="show-plant__ul__li">Gieß mich mit <%= @plant.waterNeed %>ml Wasser</li>
     <li class="show-plant__ul__li">Jetzt habe ich noch <%= @plant.waterCurrent %>ml Wasser zum Trinken</li>
     <li class="show-plant__ul__li">Ich brauche <%= @plant.sunNeed %>h Sonnenlicht</li>
-    <li class="show-plant__ul__li">Aktuell chille ich im <%= @plant.place %></li>
+    <li class="show-plant__ul__li">Aktuell chille ich hier: <%= @plant.place %></li>
   </ul>
 
   <div class="links--dif"> 
