--- a/app/assets/stylesheets/pages/_show-plant.scss
+++ b/app/assets/stylesheets/pages/_show-plant.scss
@@ -23,7 +23,7 @@
     }
 
     &__pic{
-        width: 50rem;
+        width: 100%;
         height: 400px;
         overflow: hidden;
         display: flex;
