--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -51,8 +51,11 @@
     <%= link_to 'zurück', dashboard_path %>
    
    <span class="btn-delete">
-    <%= button_to "Account löschen", plant_path(@plant.id), data: { confirm: "Bist du sicher?" }, method: :delete %>
+    <%= button_to "Pflanze löschen", plant_path(@plant.id), data: { confirm: "Bist du sicher?" }, method: :delete %>
   </span>
    <span class="link-button"> <%= link_to 'Pal bearbeiten', edit_plant_path(@plant) %></span>
+  </div>
+  <div class="links--dif">
+    <span class="link-button"><%= button_to 'Pal gießen', plant_path(@plant), params: {water: true}, method: :patch %></span>
   </div>
 </section>
