fix redirect to profile after first login

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -2,7 +2,7 @@
 <h2>Hey <%= @resource.nickName %>,</h2>
 
 <h3>Herzlich Wilkommen bei PlantPal!</h3>
-<img src="plantpal_logo.png" alt="Kaktus Cartoon">
+<!--- <img src="plantpal_logo.png" alt="Kaktus Cartoon"> --->
 <p>Über folgenden Link kannst du deine E-Mail Adresse bestätigen: </p>
 
 <p><%= link_to 'Account bestätigen', confirmation_url(@resource, confirmation_token: @token) %></p>
