--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -387,6 +387,11 @@ h3{
   } 
 }
 
+.flash, .alert{
+  margin: 1.5rem 0 0;
+  color: $color__pink--dark;
+}
+
 // Media Queries
 @media only screen and (max-width:700px){
 
