change button for confirming updates

--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -61,6 +61,6 @@
   <img id="preview" style="width:400px;">
 
   <div class="new_user__submit-button">
-    <%= form.submit "Pal hinzufügen" %>
+    <%= form.submit "Fertig!" %>
   </div>
 <% end %>
