--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -23,13 +23,13 @@
       <p>Ich fühle mich schlecht.</p>
     <% elsif @plant.love < 5  %>
       <p>Es könnte mir besser gehen...</p>
-    <% elsif @plant.love = 5  %>
+    <% elsif @plant.love  < 6  %>
       <p>Mir geht es ganz gut.</p>
     <% elsif @plant.love < 8  %>
       <p>Ich bin zufrieden.</p>
     <% elsif @plant.love < 10  %>
       <p>Ich bin happy.</p>
-    <% elsif @plant.love = 10  %>
+    <% elsif @plant.love < 11  %>
       <p>Ich bin überglücklich.</p>
     <% end %>
   </div>
