--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,9 +5,9 @@
       <h2 class="my-plants__user__details__nickname"> <%= @user.nickName %></h2>
       <p class="my-plants__user__details__plantcount"> <%= @user.plants.count %> Pflanzen</p>
     </div>
-    <%= link_to edit_user_registration_path, {:class => 'user__image-a'} do %>
-      <%= image_tag(@user_photo, :size => "150x150", :alt => @user.nickName, :class=>'user-image', :style=>'border-radius:50%;') %>
-    <% end %>
+    <%= image_tag(@user_photo, :size => "150x150", :alt => @user.nickName, :class=>'user-image', :style=>'border-radius:50%;') %>
+    <%#= link_to edit_user_registration_path, {:class => 'user__image-a'} do %>
+    <%# end %>
   </div>
   <h1 class="my-plants__h1">Meine Pals</h1>
 
