show watercurrent and love only in new

--- a/app/views/plants/new.html.erb
+++ b/app/views/plants/new.html.erb
@@ -1,7 +1,7 @@
 <section class="page-content new-plant">
 <h1 class="new_plant__h1">Ein neuer Pal in deiner Familie</h1>
 
-<%= render 'form', plant: @plant %>
+<%= render 'form', plant: @plant, edit: false %>
 
 <div class="links">
     <%= link_to 'zurück', dashboard_path %>
