--- a/app/views/plants/edit.html.erb
+++ b/app/views/plants/edit.html.erb
@@ -1,7 +1,7 @@
 <section class="page-content edit-plant">
 <h1>Pal bearbeiten</h1>
 
-<%= render 'form', plant: @plant %>
+<%= render 'form', plant: @plant, edit: true%>
 
 <p class="links">
     <%= link_to 'zurück', dashboard_path %> |
