--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -38,8 +38,9 @@
         <%= link_to plant_path(plant.id), {:class => 'my-plants__allPlants__plant-a'} do %>
           <%= image_tag(@image, :size => "400x400", :alt => plant.nickName, :class=>'my-plants__allPlants__plant-image') %>
         <% end %>
-
-        <h2 class="my-plants__allPlants__plant__nickname"><%= plant.nickName %></h2>
+         <%= link_to plant_path(plant.id) do %>
+          <h2 class="my-plants__allPlants__plant__nickname"><%= plant.nickName %></h2>
+        <% end %>
         <p class="my-plants__allPlants__plant--desc"><%= plant.realName %></p> 
 
         <div class="progress--love my-plants__allPlants__plant__love">
